enhance(datastore): make scan atomic (#1119)